# KestrelAI

./: .gitignore  Dockerfile  KESTRELAI_ARCHITECTURE.md  LICENSE  MCP_SETUP.md  README.md  USER_GUIDE.md  agent_requirements.txt  backend_requirements.txt  dashboard.py  docker-compose.yml  kestrel_export_20250811_012746.json  kestrel_export_20250811_012752.json  mcp_config.json  orch_debug.txt  pyproject.toml  pytest.ini  requirements.txt  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: build-and-publish.yml  release.yml  tests.yml
Dockerfiles/: agent_dockerfile  backend_dockerfile  frontend_dockerfile
KestrelAI/: __init__.py  agent_dockerfile  dashboard.py  model_loop.py  orch_debug.txt
KestrelAI/.chroma/: chroma.sqlite3
KestrelAI/agents/: __init__.py  base.py  base_agent.py  config.py  context_builder.py  context_manager.py  multi_level_summarizer.py  orchestrator.py  prompt_builder.py  research_agents.py  research_config.py  research_orchestrator.py  searxng_service.py  url_utils.py  web_research_agent.py
KestrelAI/backend/: backend_dockerfile  main.py
KestrelAI/backend/models/: task.py
KestrelAI/backend/routes/: tasks.py
KestrelAI/backend/services/: redis_service.py
KestrelAI/conversations/: 2d9c56f0.json  31865e99.json  3e3ff15e.json  6f86b140.json  b21b741d.json  b27100a9.json  eb80a948.json  ef3e3763.json  efcf0a6e.json  f5198908.json
KestrelAI/dataclass/: __init__.py
KestrelAI/mcp/: README.md  __init__.py  mcp_client.py  mcp_config.py  mcp_manager.py  mcp_tools.py
KestrelAI/memory/: __init__.py  hybrid_retriever.py  vector_store.py
KestrelAI/notes/: CONFERENCES.txt  ML FELLOWSHIPS.txt
KestrelAI/shared/: models.py  redis_utils.py
agents/: base.py  orchestrator.py  research_agents.py
docs/: CONTEXT_MANAGEMENT_ANALYSIS.md  CONTRIBUTING.md  DATA_FLOW_VERIFICATION.md  ENHANCED_SUMMARIZATION_DESIGN.md  FINAL_INTEGRATION_SUMMARY.md  FIXES_APPLIED.md  HYBRID_RETRIEVAL_INTEGRATION.md  IMPLEMENTATION_ISSUES_ANALYSIS.md  KNOWLEDGE_GRAPH_ANALYSIS.md  LONG_TERM_MEMORY_SYSTEMS.md  MEMORY_SYSTEM_PRIORITIZATION.md  MODEL_ENCODING_EXPLANATION.md  MULTI_LEVEL_SUMMARIZATION_DESIGN.md  PHASE1_IMPLEMENTATION_SUMMARY.md
examples/: mcp_research_example.py
kestrel-ui/: frontend_dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
kestrel-ui/src/: ChatInterface.tsx  KestrelAIApp.tsx  index.css  main.tsx
memory/: vector_store.py
notes/: CONFERENCES.txt  GRANTS.txt  ML FELLOWSHIPS.txt  ML FELLOWSHIPS_abcb77b7.txt  RESEARCH TASK.txt  RESEARCH TASK_abcb77b7.txt
searxng/: settings.yml
shared/: task_schema.json
tests/: HYBRID_RETRIEVAL_TEST_SUMMARY.md  README.md  __init__.py  conftest.py  run_tests.py
tests/api/: test_backend_api.py
tests/e2e/: test_workflow.py
tests/frontend/: test_theme_switching.py
tests/integration/: test_context_management.py  test_hybrid_retrieval_integration.py  test_memory_store.py  test_model_loop.py
tests/performance/: test_regression.py
tests/unit/: test_agents.py  test_context_manager.py  test_core.py  test_hybrid_retriever.py  test_hybrid_retriever_standalone.py  test_multi_level_summarizer.py
tests/utils/: check_services.py  test_config.py  test_fixtures.py
