[tool.poetry]
name = "KestrelAI"
version = "0.1.0"
description = "Kestrel Application with multiple services"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
panel = "^1.8.0"

# Agent service dependencies
ollama = { version = "^0.5.3", optional = true }
numpy = { version = "^1.24,<2", optional = true }
chromadb = { version = "^0.4.24", optional = true }
sentence-transformers = { version = "^2.5.1", optional = true }
duckduckgo-search = { version = "^3.9.6", optional = true }
python-dotenv = { version = "^1.0.1", optional = true }
tqdm = { version = "^4.66.4", optional = true }
beautifulsoup4 = { version = "^4.12.3", optional = true }

# Backend service dependencies
fastapi = { version = "^0.104.1", optional = true }
uvicorn = { version = "^0.24.0", extras = ["standard"], optional = true }
pydantic = { version = "^2.5.0", optional = true }
python-multipart = { version = "^0.0.6", optional = true }
httpx = { version = "^0.27.0", optional = true }
websockets = { version = "^12.0", optional = true }

[tool.poetry.extras]
agent = [
    "ollama",
    "numpy",
    "chromadb",
    "sentence-transformers",
    "duckduckgo-search",
    "python-dotenv",
    "tqdm",
    "beautifulsoup4",
    "redis"
]
backend = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "httpx",
    "websockets",
    "redis"
]
all = [
    "ollama",
    "numpy",
    "chromadb",
    "sentence-transformers",
    "duckduckgo-search",
    "python-dotenv",
    "tqdm",
    "beautifulsoup4",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "httpx",
    "websockets",
    "redis",
    "panel",
    "ollama"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true