[tool.poetry]
name = "KestrelAI"
version = "0.1.0"
description = "Kestrel Application with multiple services"
authors = ["Ganesh Danke <danke.g@northeastern.edu>"]
readme = "README.md"
packages = [{include = "KestrelAI", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
panel = "^1.8.0"

# Agent service dependencies
ollama = { version = "^0.5.3", optional = true }
numpy = { version = "^1.24,<2", optional = true }
chromadb = { version = "^0.4.24", optional = true }
sentence-transformers = { version = "^2.5.1", optional = true }
duckduckgo-search = { version = "^3.9.6", optional = true }
python-dotenv = { version = "^1.0.1", optional = true }
tqdm = { version = "^4.66.4", optional = true }
beautifulsoup4 = { version = "^4.12.3", optional = true }
tiktoken = "^0.8.0"
rank-bm25 = "^0.2.2"

# MCP (Model Context Protocol) dependencies
mcp = { version = "^0.9.0", optional = true }

# Backend service dependencies
fastapi = { version = "^0.119.0", optional = true }
uvicorn = { version = "^0.24.0", extras = ["standard"], optional = true }
pydantic = "^2.5.0"
python-multipart = { version = "^0.0.6", optional = true }
httpx = { version = "^0.27.0", optional = true }
websockets = { version = "^12.0", optional = true }

[tool.poetry.extras]
agent = [
    "ollama",
    "numpy",
    "chromadb",
    "sentence-transformers",
    "duckduckgo-search",
    "python-dotenv",
    "tqdm",
    "beautifulsoup4",
    "redis",
    "mcp"
]
backend = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "httpx",
    "websockets",
    "redis"
]
all = [
    "ollama",
    "numpy",
    "chromadb",
    "sentence-transformers",
    "duckduckgo-search",
    "python-dotenv",
    "tqdm",
    "beautifulsoup4",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "httpx",
    "websockets",
    "redis",
    "panel",
    "mcp"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-timeout = "^2.1.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
black = "~23.12.1"
ruff = "^0.1.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E402", "E722", "N815", "E501", "N999", "W291", "UP038", "N806", "F401"]  # E402: module level import not at top, E722: bare except, N815: mixedCase (Pydantic), E501: line too long (handled by black), N999: invalid module name (__init__.py), W291: trailing whitespace (handled by black), UP038: isinstance union syntax (Python 3.10+), N806: variable in function should be lowercase (constants), F401: unused imports

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E722", "E501", "F841"]  # Allow bare except, long lines, and unused vars in tests
"KestrelAI/backend/main.py" = ["E722"]  # Allow bare except in main.py for error handling
"KestrelAI/shared/models.py" = ["N815"]  # Allow mixedCase for Pydantic model fields
"**/__init__.py" = ["N999"]  # Allow invalid module names in __init__.py files
"KestrelAI/agents/web_research_agent.py" = ["N806"]  # Allow uppercase constants in functions
"KestrelAI/dashboard.py" = ["F401"]  # Allow unused imports (may be used dynamically)